[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "dotfiles"
version = "0.0.0"

[tool.hatch.env]
requires = ["hatch-pip-compile", "hatch-mkdocs"]

[tool.hatch.env.collectors.mkdocs.docs]
path = "mkdocs.yaml"

[tool.hatch.envs.docs]
detached = true
type = "pip-compile"
lock-filename = "docs/requirements.txt"
