[project]
name = "dotfiles"
version = "0.0.0"
requires-python = ">=3.9,<4"

[dependency-groups]
docs = [
    "markdown-exec",
    "mkdocs",
    "mkdocs-callouts",
    "mkdocs-gen-files",
    "mkdocs-material",
    "mkdocs-section-index",
    "pymdown-extensions"
]

[tool.uv]
default-groups = ["docs"]
